src/snapshots/ron_edit__test__crlf.ron.snap
---
source: src/lib.rs
expression: ron
---
File(
  extentions: [],
  value: WsLead(
    leading: Whitespace([]),
    content: Struct(Struct(
      ident: None,
      fields: Separated(
        values: [
          (NamedField(
            key: WsLead(
              leading: Whitespace([
                Space("\r\n    "),
                LineComment(" File containing \\r\\n endings \r\n"),
                Space("    "),
              ]),
              content: "something",
            ),
            after_key: Whitespace([]),
            value: WsLead(
              leading: Whitespace([
                Space(" "),
              ]),
              content: Int(Int("10")),
            ),
          ), Whitespace([
            Space("\r\n"),
          ])),
        ],
        trailing_comma: false,
        trailing_ws: Whitespace([]),
      ),
    )),
  ),
  trailing_ws: Whitespace([
    Space("\r\n"),
  ]),
)
